# fullstack-etherscan-app

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  logging_config.yml
backend/src/: client.rs  etherscan.rs  handlers.rs  main.rs
common/: Cargo.toml
common/src/: models.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  service.rs
