[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.19.2", features= ["macros", "rt-multi-thread"]}
common = { version = "0.1.0", path = "../common"}
warp = "0.3.2"
serde = { version = "1.0.138", features = ["derive"]}
serde_json = "1"
log = "0.4"
log4rs = "1.1.1"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"]}