[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde_json = "1"
serde = { version = "1.0.138", features = ["derive"]}
gloo-net = "0.2.3"
wasm-bindgen-futures = "0.4.30"
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
common = { version = "0.1.0", path = "../common"}